logs/turtlesim/build.make.127.log.stderr
In file included from /home/alfredo/turtlesim/build/turtlesim/include/turtlesim/../../../../src/ros_tutorials/turtlesim/include/turtlesim/turtle_frame.h:46:0,
                 from /home/alfredo/turtlesim/build/turtlesim/include/turtlesim/moc_turtle_frame.cpp:9:
/home/alfredo/turtlesim/build/turtlesim/include/turtlesim/../../../../src/ros_tutorials/turtlesim/include/turtlesim/turtle.h:67:8: error: extra qualification ‘turtlesim::Turtle::’ on member ‘orientation’ [-fpermissive]
   void Turtle::orientation(const geometry_msgs::Point::ConstPtr& point2);
        ^~~~~~
make[2]: *** [CMakeFiles/turtlesim_node.dir/include/turtlesim/moc_turtle_frame.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
In file included from /home/alfredo/turtlesim/src/ros_tutorials/turtlesim/include/turtlesim/turtle_frame.h:46:0,
                 from /home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtlesim.cpp:34:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/include/turtlesim/turtle.h:67:8: error: extra qualification ‘turtlesim::Turtle::’ on member ‘orientation’ [-fpermissive]
   void Turtle::orientation(const geometry_msgs::Point::ConstPtr& point2);
        ^~~~~~
make[2]: *** [CMakeFiles/turtlesim_node.dir/src/turtlesim.cpp.o] Error 1
In file included from /home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:30:0:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/include/turtlesim/turtle.h:67:8: error: extra qualification ‘turtlesim::Turtle::’ on member ‘orientation’ [-fpermissive]
   void Turtle::orientation(const geometry_msgs::Point::ConstPtr& point2);
        ^~~~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp: In constructor ‘turtlesim::Turtle::Turtle(const ros::NodeHandle&, const QImage&, const QPointF&, float)’:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:62:60: error: ‘orientationCallback’ is not a member of ‘turtlesim::Turtle’
   orientation_sub=nh_.subscribe("orientation", 1, &Turtle::orientationCallback, this);
                                                            ^~~~~~~~~~~~~~~~~~~
In file included from /opt/ros/melodic/include/ros/ros.h:40:0,
                 from /home/alfredo/turtlesim/src/ros_tutorials/turtlesim/include/turtlesim/turtle.h:35,
                 from /home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:30:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp: In member function ‘void turtlesim::Turtle::paint(QPainter&)’:
/opt/ros/melodic/include/ros/console.h:348:176: warning: format ‘%f’ expects argument of type ‘double’, but argument 8 has type ‘int’ [-Wformat=]
     ::ros::console::print(filter, __rosconsole_define_location__loc.logger_, __rosconsole_define_location__loc.level_, __FILE__, __LINE__, __ROSCONSOLE_FUNCTION__, __VA_ARGS__)
                                                                                                                                                                                ^
/opt/ros/melodic/include/ros/console.h:351:5: note: in expansion of macro ‘ROSCONSOLE_PRINT_AT_LOCATION_WITH_FILTER’
     ROSCONSOLE_PRINT_AT_LOCATION_WITH_FILTER(NULL, __VA_ARGS__)
     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/ros/melodic/include/ros/console.h:387:7: note: in expansion of macro ‘ROSCONSOLE_PRINT_AT_LOCATION’
       ROSCONSOLE_PRINT_AT_LOCATION(__VA_ARGS__); \
       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/ros/melodic/include/ros/console.h:572:35: note: in expansion of macro ‘ROS_LOG_COND’
 #define ROS_LOG(level, name, ...) ROS_LOG_COND(true, level, name, __VA_ARGS__)
                                   ^~~~~~~~~~~~
/opt/ros/melodic/include/rosconsole/macros_generated.h:110:23: note: in expansion of macro ‘ROS_LOG’
 #define ROS_INFO(...) ROS_LOG(::ros::console::levels::Info, ROSCONSOLE_DEFAULT_NAME, __VA_ARGS__)
                       ^~~~~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:250:3: note: in expansion of macro ‘ROS_INFO’
   ROS_INFO("DRAWLINE  at x=[%f], y=[%f]", int(wayx), int(wayy));
   ^
/opt/ros/melodic/include/ros/console.h:348:176: warning: format ‘%f’ expects argument of type ‘double’, but argument 9 has type ‘int’ [-Wformat=]
     ::ros::console::print(filter, __rosconsole_define_location__loc.logger_, __rosconsole_define_location__loc.level_, __FILE__, __LINE__, __ROSCONSOLE_FUNCTION__, __VA_ARGS__)
                                                                                                                                                                                ^
/opt/ros/melodic/include/ros/console.h:351:5: note: in expansion of macro ‘ROSCONSOLE_PRINT_AT_LOCATION_WITH_FILTER’
     ROSCONSOLE_PRINT_AT_LOCATION_WITH_FILTER(NULL, __VA_ARGS__)
     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/ros/melodic/include/ros/console.h:387:7: note: in expansion of macro ‘ROSCONSOLE_PRINT_AT_LOCATION’
       ROSCONSOLE_PRINT_AT_LOCATION(__VA_ARGS__); \
       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/ros/melodic/include/ros/console.h:572:35: note: in expansion of macro ‘ROS_LOG_COND’
 #define ROS_LOG(level, name, ...) ROS_LOG_COND(true, level, name, __VA_ARGS__)
                                   ^~~~~~~~~~~~
/opt/ros/melodic/include/rosconsole/macros_generated.h:110:23: note: in expansion of macro ‘ROS_LOG’
 #define ROS_INFO(...) ROS_LOG(::ros::console::levels::Info, ROSCONSOLE_DEFAULT_NAME, __VA_ARGS__)
                       ^~~~~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:250:3: note: in expansion of macro ‘ROS_INFO’
   ROS_INFO("DRAWLINE  at x=[%f], y=[%f]", int(wayx), int(wayy));
   ^
make[2]: *** [CMakeFiles/turtlesim_node.dir/src/turtle.cpp.o] Error 1
In file included from /home/alfredo/turtlesim/src/ros_tutorials/turtlesim/include/turtlesim/turtle_frame.h:46:0,
                 from /home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle_frame.cpp:30:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/include/turtlesim/turtle.h:67:8: error: extra qualification ‘turtlesim::Turtle::’ on member ‘orientation’ [-fpermissive]
   void Turtle::orientation(const geometry_msgs::Point::ConstPtr& point2);
        ^~~~~~
make[2]: *** [CMakeFiles/turtlesim_node.dir/src/turtle_frame.cpp.o] Error 1
make[1]: *** [CMakeFiles/turtlesim_node.dir/all] Error 2
make: *** [all] Error 2
